[Glitch] Fix wrong colors in the high-contrast theme
Port 1c3192df6bf48eb4c3613f2a8744c809f6eeeec0 to glitch-soc

--- a/app/javascript/flavours/glitch/styles/contrast/diff.scss
+++ b/app/javascript/flavours/glitch/styles/contrast/diff.scss
@@ -1,36 +1,20 @@
-// components.scss
-
-.status__content a,
-.reply-indicator__content a {
-  color: lighten($ui-highlight-color, 12%);
-  text-decoration: underline;
-
-  &.mention {
-    text-decoration: none;
-  }
-
-  &.mention span {
-    text-decoration: underline;
-
-    &:hover,
-    &:focus,
-    &:active {
-      text-decoration: none;
+.compose-form {
+  .compose-form__modifiers {
+    .compose-form__upload {
+      &-description {
+        input {
+          &::placeholder {
+            opacity: 1;
+          }
+        }
+      }
     }
-  }
-
-  &:hover,
-  &:focus,
-  &:active {
-    text-decoration: none;
-  }
-
-  &.status__content__spoiler-link {
-    color: $secondary-text-color;
-    text-decoration: none;
   }
 }
 
+.status__content a,
+.link-footer a,
+.reply-indicator__content a,
 .status__content__read-more-button {
   text-decoration: underline;
 
@@ -39,31 +23,56 @@
   &:active {
     text-decoration: none;
   }
+
+  &.mention {
+    text-decoration: none;
+
+    span {
+      text-decoration: underline;
+    }
+
+    &:hover,
+    &:focus,
+    &:active {
+      span {
+        text-decoration: none;
+      }
+    }
+  }
 }
 
-.getting-started__footer a {
-  text-decoration: underline;
-
-  &:hover,
-  &:focus,
-  &:active {
-    text-decoration: none;
-  }
+.status__content a {
+  color: $highlight-text-color;
 }
 
 .nothing-here {
   color: $darker-text-color;
 }
 
-.public-layout .public-account-header__tabs__tabs .counter.active::after {
-  border-bottom: 4px solid $ui-highlight-color;
+.compose-form__poll-wrapper .button.button-secondary,
+.compose-form .autosuggest-textarea__textarea::placeholder,
+.compose-form .spoiler-input__input::placeholder,
+.report-dialog-modal__textarea::placeholder,
+.language-dropdown__dropdown__results__item__common-name,
+.compose-form .icon-button {
+  color: $inverted-text-color;
 }
 
-.composer {
-  .composer--spoiler input,
-  .compose-form__autosuggest-wrapper textarea {
-    &::placeholder {
-      color: $inverted-text-color;
-    }
+.text-icon-button.active {
+  color: $ui-highlight-color;
+}
+
+.language-dropdown__dropdown__results__item.active {
+  background: $ui-highlight-color;
+  font-weight: 500;
+}
+
+.link-button:disabled {
+  cursor: not-allowed;
+
+  &:hover,
+  &:focus,
+  &:active {
+    text-decoration: none !important;
   }
 }
